Mon Sep 30 12:01:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tdsutil.h src/tds/config.c:
	- Namespace cleanup, make get_server_info() static since it
	  isn't needed outside config.c.

Mon Sep 30 11:47:12 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in include/tdsutil.h src/dblib/bcp.c
	  src/dblib/dblib.c src/pool/stream.c src/server/server.c
	  src/tds/convert.c src/tds/read.c src/tds/token.c:
	- Namespace cleanup, rename get_size_by_type() to
	  tds_get_size_by_type().

Mon Sep 30 11:30:29 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tdsutil.h src/apps/tsql.c src/dblib/dblib.c
	  src/tds/config.c:
	- Namespace cleanup, rename set_interfaces_file_loc() to
	  tds_set_interfaces_file_loc().

Mon Sep 30 11:07:51 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/Makefile.am src/dblib/Makefile.am
	  src/odbc/Makefile.am src/tds/Makefile.am:
	- Use relative paths to find convenience libraries.
	  Fixes builds outside srcdir.

Mon Sep 30 10:40:39 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tdsutil.h src/tds/config.c src/tds/login.c
	  src/tds/query.c:
	- Eliminate some fixed-size buffers.

Mon Sep 30 10:23:22 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/vasprintf.c:
	- Optimize the last-resort version of vasprintf():
	  if we don't need to be reentrant, we can avoid opening and
	  closing the file handle each time.

Mon Sep 30 11:47:13 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in doc/userguide.sgml include/des.h:
	- remove --with-ssl parameter (not used)
	- update documentation

Sun Sep 29 15:43:00 CDT 2002	Steve Langasek <vorlon@netexpress.net>
	* include/des.h src/tds/des.c src/tds/challenge.c src/tds/login.c
	  acinclude.m4:
	- add DES support to libtds, breaking the dependency on OpenSSL

Sun Sep 29 15:27:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/tds/login.c src/tds/write.c: